--- a/css-calendar.html
+++ b/css-calendar.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="calendar.css"/>
+  <link rel="stylesheet" href="css-calendar.css"/>
 </head>
 
 <body>
